--- a/NOVA/Views/Sevkiyat/SaticiSiparisRaporuPartials/SiparisRaporu_HazırListe.cshtml
+++ b/NOVA/Views/Sevkiyat/SaticiSiparisRaporuPartials/SiparisRaporu_HazırListe.cshtml
@@ -86,7 +86,8 @@
                 $('#siparis-raporu-hazir-liste').modal('hide');
             },
             success: (response) => {
-                HazırListe = response.filter(x => !Kalemler.map(y => y.INCKEY).includes(x.INCKEY) && x.GIRIS_DEPO == GirisDepo);
+                //HazırListe = response.filter(x => !Kalemler.map(y => y.INCKEY).includes(x.INCKEY) && x.GIRIS_DEPO == GirisDepo);
+                HazırListe = response.filter(x => !Kalemler.map(y => y.INCKEY).includes(x.INCKEY) && (x.GIRIS_DEPO == GirisDepo || x.GIRIS_DEPO == null));
             }
         })
         .then(() => {
