İşEmri sayfasının kayma sorunu giderildi.

--- a/NOVA/Views/IsEmri/IsEmri.cshtml
+++ b/NOVA/Views/IsEmri/IsEmri.cshtml
@@ -333,7 +333,7 @@
     <div id="nova-overlay" style="position: absolute; background: #00000080; left: 0; right: 0; bottom: 0; top: 0; z-index: 9999999;display:flex;justify-content:center;align-items:center;">
         <div class="heart"><img id="progress" src="~/images/novasaydam.png" width="400" /></div>
     </div>
-    <div class="container-fluid mt-3">
+    <div class="container-fluid mt-3" style="overflow:auto">
         <div class="centercontent" id="content" style="display:none">
             <div class="heart"><img id="progress" src="~/images/novasaydam.png" style="max-width:15vw" /></div>
         </div>
@@ -1203,12 +1203,12 @@
 
         })
         function ShowProgress() {
-            document.body.style.overflow = 'hidden';
+            //document.body.style.overflow = 'hidden';
             document.activeElement.blur();
             $('#nova-overlay').fadeIn('fast').css('display', 'flex');
         }
         function HideProgress() {
-            document.body.style.overflow = 'auto';
+            //document.body.style.overflow = 'auto';
             $('#nova-overlay').fadeOut('slow');
         }
 
