--- a/NOVA/Views/Uretim/UretimPlani.cshtml
+++ b/NOVA/Views/Uretim/UretimPlani.cshtml
@@ -6,6 +6,9 @@
     <meta charset='utf-8' />
 
     <style>
+        .btn-secondary, .btn-secondary:hover, .btn-secondary:active, .btn-secondary:visited {
+            background-color: rgb(105, 127, 194) !important;
+        }
         .fc-timegrid-event {
             font-size: xx-small;
         }
@@ -451,102 +454,103 @@
         <div class="col-8">
             <div id='calendar'></div>
         </div>
+       
 
     </div>
-    
 
-    <div class="modal fade" id="HurdaModal" data-bs-backdrop="static" data-bs-keyboard="false" aria-labelledby="SiparisModalLabel" aria-hidden="true">
 
-        <div class="modal-dialog modal-sm modal-dialog-scrollable" style="max-width: 20%;top:20vh">
-            <div class="modal-content" style="max-height:45vh;">
-                <div class="container-fluid mt-3">
-                    <div class="centercontent" id="content7" style="display:unset">
-                        <div class="heart"><img id="progress7" src="/images/novasaydam.png" style="max-width:15vw;display:none" /></div>
-                    </div>
-                    <div class="row text-center mt-1">
-                        <div class="col">
-                            <label class="modal-title" id="DateLabel" style="font-weight:bold"></label>
+        <div class="modal fade" id="HurdaModal" data-bs-backdrop="static" data-bs-keyboard="false" aria-labelledby="SiparisModalLabel" aria-hidden="true">
+
+            <div class="modal-dialog modal-sm modal-dialog-scrollable" style="max-width: 20%;top:20vh">
+                <div class="modal-content" style="max-height:45vh;">
+                    <div class="container-fluid mt-3">
+                        <div class="centercontent" id="content7" style="display:unset">
+                            <div class="heart"><img id="progress7" src="/images/novasaydam.png" style="max-width:15vw;display:none" /></div>
                         </div>
-                    </div>
-                    <div class="row mt-2">
-
-                        <div class="col" id="hurdamiktar2div">
-
-
-                            <input class="form-control text-center" placeholder="Saat" type="time" id="saat">
-
-
-
+                        <div class="row text-center mt-1">
+                            <div class="col">
+                                <label class="modal-title" id="DateLabel" style="font-weight:bold"></label>
+                            </div>
                         </div>
-                    </div>
+                        <div class="row mt-2">
+
+                            <div class="col" id="hurdamiktar2div">
 
 
-                    <div class="modal-footer mt-1" style="display:flex;justify-content:center;align-items:center;">
-                        <button class="btn btn-primary" id="ModalSaveButton" type="button" onclick="KaliteKayit()">KAYDET</button>
-                        <button class="btn btn-danger" type="button" onclick="ModalKapat()">KAPAT</button>
-                        <button class="btn btn-warning" type="button" onclick="Sil()">SİL</button>
+                                <input class="form-control text-center" placeholder="Saat" type="time" id="saat">
+
+
+
+                            </div>
+                        </div>
+
+
+                        <div class="modal-footer mt-1" style="display:flex;justify-content:center;align-items:center;">
+                            <button class="btn btn-primary" id="ModalSaveButton" type="button" onclick="KaliteKayit()">KAYDET</button>
+                            <button class="btn btn-danger" type="button" onclick="ModalKapat()">KAPAT</button>
+                            <button class="btn btn-warning" type="button" onclick="Sil()">SİL</button>
+                        </div>
                     </div>
                 </div>
             </div>
+
         </div>
+        <div class="modal fade" id="PlanModal" data-bs-backdrop="static" data-bs-keyboard="false" aria-labelledby="SiparisModalLabel" aria-hidden="true">
 
-    </div>
-    <div class="modal fade" id="PlanModal" data-bs-backdrop="static" data-bs-keyboard="false" aria-labelledby="SiparisModalLabel" aria-hidden="true">
-
-        <div class="modal-dialog modal-sm modal-dialog-scrollable" style="max-width: 20%;top:20vh">
-            <div class="modal-content" style="max-height:45vh;">
-                <div class="container-fluid mt-3">
-                    <div class="centercontent" id="content7" style="display:unset">
-                        <div class="heart"><img id="progress7" src="/images/novasaydam.png" style="max-width:15vw;display:none" /></div>
-                    </div>
-                    <div class="row text-center mt-1">
-                        <div class="col">
-                            <label class="modal-title" id="DateLabel" style="font-weight:bold"></label>
+            <div class="modal-dialog modal-sm modal-dialog-scrollable" style="max-width: 20%;top:20vh">
+                <div class="modal-content" style="max-height:45vh;">
+                    <div class="container-fluid mt-3">
+                        <div class="centercontent" id="content7" style="display:unset">
+                            <div class="heart"><img id="progress7" src="/images/novasaydam.png" style="max-width:15vw;display:none" /></div>
                         </div>
-                    </div>
-                    <div class="row mt-2">
-
-                        <div class="col">
-
-
-                            <select class="form-select" style="text-align:center" id="stokSelect">
-                            </select>
-
-
-
+                        <div class="row text-center mt-1">
+                            <div class="col">
+                                <label class="modal-title" id="DateLabel" style="font-weight:bold"></label>
+                            </div>
                         </div>
-                    </div>
-                    <div class="row mt-1">
-                        <div class="col">
+                        <div class="row mt-2">
+
+                            <div class="col">
 
 
-                            <input class="form-control text-center" placeholder="MİKTAR1" type="number" id="miktar1">
+                                <select class="form-select" style="text-align:center" id="stokSelect">
+                                </select>
 
 
 
+                            </div>
                         </div>
-                        <div class="col">
+                        <div class="row mt-1">
+                            <div class="col">
 
 
-                            <input class="form-control text-center" placeholder="MİKTAR2" type="number" id="miktar2">
+                                <input class="form-control text-center" placeholder="MİKTAR1" type="number" id="miktar1">
 
 
 
+                            </div>
+                            <div class="col">
+
+
+                                <input class="form-control text-center" placeholder="MİKTAR2" type="number" id="miktar2">
+
+
+
+                            </div>
                         </div>
-                    </div>
 
 
-                    <div class="modal-footer mt-1" style="display:flex;justify-content:center;align-items:center;">
-                        <button class="btn btn-primary" id="ModalSaveButton" type="button" onclick="PlanKayit()">KAYDET</button>
-                        <button class="btn btn-danger" type="button" onclick="hidePlanModal()">KAPAT</button>
+                        <div class="modal-footer mt-1" style="display:flex;justify-content:center;align-items:center;">
+                            <button class="btn btn-primary" id="ModalSaveButton" type="button" onclick="PlanKayit()">KAYDET</button>
+                            <button class="btn btn-danger" type="button" onclick="hidePlanModal()">KAPAT</button>
+                        </div>
                     </div>
                 </div>
             </div>
+
         </div>
 
     </div>
-
-</div>
 @*<div id="contextMenu" class="context-menu"
          style="display:none">
         <ul>
